--- a/professores/templates/professores/relato_avaliar.html
+++ b/professores/templates/professores/relato_avaliar.html
@@ -56,7 +56,7 @@
 
     <b>{% lng "Projeto" "Project" %}</b>:
     [<a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.nome }}</a>]
-    <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a><br>
+    <a href="{% url 'projeto_infos' projeto.id %}">{{projeto.get_titulo}}</a><br>
     {% if projeto.orientador %}
       <b>
         {% if projeto.proposta.intercambio %}
