--- a/projetos/templates/projetos/lista_feedback_estudantes.html
+++ b/projetos/templates/projetos/lista_feedback_estudantes.html
@@ -45,7 +45,7 @@
           
           <td style="font-size:80%">
             {% if projeto %}
-              <a href="{% url 'projeto_completo' projeto.id %}">
+              <a href="{% url 'projeto_infos' projeto.id %}">
                 {{projeto}}
               </a>
             {% endif %}
