--- a/projetos/templates/projetos/projeto_detalhes.html
+++ b/projetos/templates/projetos/projeto_detalhes.html
@@ -5,13 +5,17 @@
   Data: 15 de Maio de 2019
 {% endcomment %}
 
+
+{% comment %} NAO USAR NAO USAR {% endcomment %}
+{% comment %} NAO USAR NAO USAR {% endcomment %}
+{% comment %} NAO USAR NAO USAR {% endcomment %}
+{% comment %} NAO USAR NAO USAR {% endcomment %}
+
 {% block head %}
-  
   {% load static %}
   {% load bleach %}
   {% load addhttp %}
   {% load linguas %}
-
 {% endblock %}
 
 {% block content %}
