--- a/administracao/templates/administracao/fechar_conexoes.html
+++ b/administracao/templates/administracao/fechar_conexoes.html
@@ -60,7 +60,7 @@
     {% for projeto in projetos %}
     <div class="projeto_sel" >
       <a href="{% url 'organizacao_completo' projeto.organizacao.id %}" class="dark-blue-bold">{{ projeto.organizacao.nome }}</a> -
-      <a href="{% url 'projeto_completo' projeto.id %}"> {{projeto.get_titulo}}</a>
+      <a href="{% url 'projeto_infos' projeto.id %}"> {{projeto.get_titulo}}</a>
       <br>
       
       {% with conexoes=projeto.conexao_set.all %}
