--- a/administracao/templates/administracao/selecionar_orientadores.html
+++ b/administracao/templates/administracao/selecionar_orientadores.html
@@ -84,7 +84,7 @@
     {% for projeto in projetos %}
     <div class="projeto_sel">
       <a href="{% url 'organizacao_completo' projeto.organizacao.id %}" class="dark-blue-bold">{{ projeto.organizacao.nome }}</a> -
-      <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
+      <a href="{% url 'projeto_infos' projeto.id %}">{{projeto.get_titulo}}</a>
       <br>
 
       <label for="projeto{{projeto.id}}">Orientador(a)</label></b>:
