--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -48,12 +48,12 @@
                 {% if banca.get_projeto.organizacao %}
                   [<a class="imprimir" href="{% url 'organizacao_completo' banca.get_projeto.organizacao.id %}">{{ banca.get_projeto.organizacao.nome }}</a>]
                 {% endif %}
-                <a class="imprimir" href="{% url 'projeto_completo' banca.get_projeto.id %}">
+                <a class="imprimir" href="{% url 'projeto_infos' banca.get_projeto.id %}">
                   {% if banca.get_projeto.titulo_final and banca.get_projeto.titulo_final != banca.get_projeto.proposta.titulo %}
                     {{banca.get_projeto.titulo_final}}</a><br>
                     <small>&nbsp;&nbsp;
                       {% lng "Título original da proposta:" "Original title of the proposal:" %}
-                      <a class="imprimir" href="{% url 'projeto_completo' banca.get_projeto.id %}">{{banca.get_projeto.proposta.titulo}}</a>
+                      <a class="imprimir" href="{% url 'projeto_infos' banca.get_projeto.id %}">{{banca.get_projeto.proposta.titulo}}</a>
                     </small>
                   {% else %}
                     {{banca.get_projeto.get_titulo}}</a>
