--- a/professores/templates/professores/orientacoes_alocadas.html
+++ b/professores/templates/professores/orientacoes_alocadas.html
@@ -33,7 +33,7 @@
         {% endif %}
         <b style="margin-right: 1px;">#{{ forloop.revcounter }}.</b>
         
-        <a href="{% url 'projeto_completo' projeto.id %}">
+        <a href="{% url 'projeto_infos' projeto.id %}">
           {{projeto.ano}}.{{projeto.semestre}}
           [{{projeto.organizacao.nome}}] {{projeto.get_titulo}}
           { {{ n_alocacoes }} {% lng_n n_alocacoes "estudante" "estudantes" "student" "students" %} }
