--- a/professores/templates/professores/planos_de_orientacao_todos.html
+++ b/professores/templates/professores/planos_de_orientacao_todos.html
@@ -85,7 +85,7 @@
 
           <th>
             <strong>{% lng "Projeto" "Project" %}:</strong>
-            <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
+            <a href="{% url 'projeto_infos' projeto.id %}">{{projeto.get_titulo}}</a>
             {% if projeto.organizacao %}<a href="{% url 'organizacao_completo' projeto.organizacao.id %}">[{{ projeto.organizacao.nome }}]</a>{% else %}[ORGANIZAÇAO NÃO DEFINIDA]{% endif %}
             <br><b>{% lng "Orientador" "Advisor" %}:</b>
               {% if projeto.orientador %}
