--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -62,7 +62,7 @@
                 {% else %}
                   {% lng "[SEM ORGANIZAÇÃO]" "[NO ORGANIZATION]" %}
                 {% endif %}
-                <a href="{% url 'projeto_completo' alocacao.projeto.id %}">{{alocacao.projeto.get_titulo}}</a>
+                <a href="{% url 'projeto_infos' alocacao.projeto.id %}">{{alocacao.projeto.get_titulo}}</a>
                 {% include "tipo_projeto.html" with projeto=alocacao.projeto %}
               {% endif %}
             {% endfor %}
