--- a/projetos/templates/projetos/projeto_infos.html
+++ b/projetos/templates/projetos/projeto_infos.html
@@ -512,7 +512,7 @@
 
   {% if user.prof_a %}
     {% include "estudantes/includes/conduta_respostas.html" with grupo=True %}
-    {% include "estudantes/includes/funcionalidade_respostas.html" with esconde_perg=True %}
+    {% include "estudantes/includes/funcionalidade_respostas.html" with mostra_estudante=True %}
     {% include "estudantes/includes/pares_respostas.html" %}
   {% endif %}
 
