--- a/professores/templates/professores/mentorias_alocadas.html
+++ b/professores/templates/professores/mentorias_alocadas.html
@@ -59,6 +59,6 @@
   <p>&nbsp;</p>
 
   {% include "toggle_anteriores.html" %}  
-  {% include "janelas-modal.html" %}
+  {% include "base-modal.html" %}
 
 {% endblock %}
