--- a/documentos/templates/documentos/materias_midia.html
+++ b/documentos/templates/documentos/materias_midia.html
@@ -16,13 +16,13 @@
   {% if user.admin %}
     <span class="esconder">
       <a href="#"
-      class="open-documento" style="cursor:pointer;"
+      class="open-modal" style="cursor:pointer;"
       data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}">
         <i class="fas fa-plus"></i> 
         {% lng "Cadastrar Nova Matéria" "Register New Document" %}
       </a>
     </span>
-    {% include "documento-modal.html" %}
+    {% include "base-modal.html" %}
   {% endif %}
   
   <div id="atualizar">
