--- a/documentos/templates/documentos/tabela_atas.html
+++ b/documentos/templates/documentos/tabela_atas.html
@@ -18,7 +18,7 @@
   {% if user.admin %}
     <span class="esconder">
       <a href="#"
-       class="open-documento"
+       class="open-modal"
        data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}">
         <i class="fas fa-plus"></i> 
         {% lng "Adicionar nova Ata" "Add new Meeting Minutes" %}</a>
@@ -78,7 +78,7 @@
   </div>
 
   {% if user.admin %}
-    {% include "documento-modal.html" %}
+    {% include "base-modal.html" %}
   {% endif %}
 
 {% endblock %}
