--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -102,13 +102,13 @@
   {% if user.admin %}
     <span class="esconder">
       <a  href="#"
-       class="open-documento" style="cursor:pointer;"
+       class="open-modal" style="cursor:pointer;"
           data-url="{% url 'adiciona_documento' %}"
           ><i class="fas fa-plus"></i>
           {% lng "Adicionar novo documento" "Add new document" %}
         </a>
     </span>
-    {% include "documento-modal.html" %}
+    {% include "base-modal.html" %}
   {% endif %}
 
   <script>
