--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -213,6 +213,6 @@
   </script>
 
   {% include "edicoes_ajax.html" %}
-  {% include "janelas-modal.html" %}
+  {% include "base-modal.html" %}
 
 {% endblock %}
