--- a/projetos/templates/projetos/acompanhamento_view.html
+++ b/projetos/templates/projetos/acompanhamento_view.html
@@ -58,5 +58,47 @@
 </form>
 
 <script>
+
+  function atualiza(e) {
+    
+    if (!$("form")[0].checkValidity()) {
+      $("form").find("input[type='submit']").click();
+      return false;
+    }
+
+    var texto = $("#texto").val();
+    var data_hora = $("#data_hora").val();
+    var parceiro = $("#parceiro").val();
+
+    // Check if the fields are empty
+    if (!texto || !parceiro || !data_hora) {
+      alert("Por favor, preencha todos os campos.");
+      return false;
+    }
+
+    $.ajax({
+      type: "POST",
+      url: "{{ url }}",
+      data: {
+          "texto":texto,
+          "data_hora":data_hora,
+          "parceiro":parceiro,
+          "csrfmiddlewaretoken": "{{ csrf_token }}",
+      },
+      success: function(response){
+          if (response.atualizado) {
+            autor = "<a class='imprimir' href='" + "{% url 'parceiro_detail' %}" + response.autor_id + "'>" + response.autor + "</a>"
+            org = "<a class='imprimir' href='" + "{% url 'organizacao_completo' %}" + response.org_id + "'>" + response.org + "</a>"
+            linha_nova = "<tr><td>" + autor + "</td><td>" + org + "</td><td>" + response.data + "</td><td>" + texto + "</td></tr>";
+            $("#AcompanhamentoTable tbody").prepend(linha_nova);
+          } else {
+            console.log("Erro: Valor não atualizado.");
+          }
+      },
+      {% include "ajax_error_function.js" %}
+    });
+  }
+
   $("#atualiza").on("click", atualiza);
+
 </script>
