--- a/templates/annotation-modal.html
+++ b/templates/annotation-modal.html
@@ -6,6 +6,8 @@
 
 {% comment %} Esse é para organização prospectada só {% endcomment %}
 
+{% load linguas %}
+
 <script>
 
   var anotacao;
@@ -72,13 +74,13 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Editar Anotação</h5>
+        <h5 class="modal-title">{% lng "Editar Anotação" "Edit Annotation" %}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        Tem certeza que deseja editar a anotação?
+        {% lng "Tem certeza que deseja editar a anotação?" "Are you sure you want to edit the annotation?" %}
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary mb-1" data-dismiss="modal" >Não</button>
@@ -87,8 +89,6 @@
     </div>
   </div>
 </div>
-
-{% comment %} {% include "janela_modal.html" with nome="popup_anotacao" %} {% endcomment %}
 
 <script>
 
